--- a/index.html
+++ b/index.html
@@ -1,14 +1,22 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>METATECH AI</title>
-    <meta name="theme-color" content="#1b1b1b" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>IA: Lo que está en el META</title>
+  <meta name="description"
+    content="Disponibilizamos el meta de la Inteligencia Artificial. Encontrarás las técnicas, motores y paradigmas que actualmente están siendo más utilizados en la IA para mantenerte a la punta de la tecnología.">
+  <meta name="keywords" content="Inteligencia Artificial, IA, whats on meta">
+  <meta name="author" content="METATECH IA">
+
+  <meta name="theme-color" content="#1b1b1b" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
